<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/app_background_before_login"
tools:context=".presentation.onboarding.OnboardingPage1Fragment"
android:padding="25dp">

<!-- Card background container -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/containerCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@drawable/darawable_card_background_on_1"
    android:padding="15dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <!-- Line 1 -->

    <!-- Line 2 -->
    <TextView
        android:id="@+id/textViewProtecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protecting"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProtecting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:text="@string/humans"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/verifylabs_smile_icon_light_grey_rgb_1__traced_"
        app:layout_constraintEnd_toEndOf="@+id/textViewProtecting"
        app:layout_constraintStart_toStartOf="@+id/textViewProtecting"
        app:layout_constraintTop_toBottomOf="@id/textViewProtecting" />

    <!-- Line 3 -->
    <TextView
        android:id="@+id/textViewProtecting3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_the_age"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewProtecting2"
        app:layout_constraintStart_toStartOf="@+id/textViewProtecting2"
        app:layout_constraintTop_toBottomOf="@id/textViewProtecting2" />

    <!-- Line 4 -->
    <TextView
        android:id="@+id/textViewProtecting4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:text="@string/of"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:textStyle="bold"
        app:drawableRightCompat="@drawable/verifylabs_robot_icon_light_grey_rgb_1__traced_"
        app:layout_constraintStart_toStartOf="@+id/textViewProtecting3"
        app:layout_constraintTop_toBottomOf="@id/textViewProtecting3" />

    <!-- Line 5 -->
    <TextView
        android:id="@+id/textViewProtecting5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/textViewProtecting4"
        app:layout_constraintStart_toEndOf="@id/textViewProtecting4"
        android:layout_marginStart="15dp" />

    <!-- Line 6 -->
    <TextView
        android:id="@+id/textViewProtecting6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_n_n_n_n"
        android:textAlignment="textStart"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/textViewProtecting4"
        app:layout_constraintStart_toEndOf="@id/textViewProtecting5"
        android:layout_marginStart="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!-- Onboarding Logo -->
<ImageView
    android:id="@+id/imgOnboarding"
    android:layout_width="250dp"
    android:layout_height="27dp"
    android:src="@drawable/only_verifylabs_logo"
    android:contentDescription="@string/onboarding_logo"
    android:scaleType="centerInside"
    app:layout_constraintTop_toBottomOf="@id/containerCard"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
