<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/account_card_bg"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <!-- Title -->
            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/error_title"
                android:textColor="@color/header_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <!-- Message -->
            <TextView
                android:id="@+id/dialogMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="20dp"
                android:text="@string/error_message_placeholder"
                android:textColor="@color/header_text"
                android:textSize="13sp" />

            <!-- horizontal divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#338E8E93" />

            <!-- OK Button -->
            <TextView
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/ok_button"
                android:textColor="@color/header_text"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
